@@ -17,7 +17,8 @@
  */
 package org.apache.pig.test;
 
-import static org.apache.pig.ExecType.MAPREDUCE;
+import static org.apache.pig.builtin.mock.Storage.resetData;
+import static org.apache.pig.builtin.mock.Storage.tuple;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
@@ -27,14 +28,15 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 
+import org.apache.pig.ExecType;
 import org.apache.pig.PigServer;
+import org.apache.pig.builtin.mock.Storage.Data;
 import org.apache.pig.data.BagFactory;
 import org.apache.pig.data.DefaultTuple;
 import org.apache.pig.data.Tuple;
 import org.apache.pig.data.TupleFactory;
 import org.apache.pig.parser.ParserException;
 import org.junit.After;
-import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -56,8 +58,6 @@ import org.junit.Test;
  * will go through a regular project (without the following flag)
  */
 public class TestRelationToExprProject {
-
-    private static MiniCluster cluster = MiniCluster.buildCluster();
     private PigServer pigServer;
     private static final String TEST_FILTER_COUNT3_INPUT="test/org/apache/pig/test/data/TestRelationToExprProjectInput.txt";
 
@@ -66,7 +66,7 @@ public class TestRelationToExprProject {
      */
     @Before
     public void setUp() throws Exception {
-        pigServer = new PigServer(MAPREDUCE, cluster.getProperties());
+        pigServer = new PigServer(ExecType.LOCAL);
     }
 
     /* (non-Javadoc)
@@ -77,27 +77,21 @@ public class TestRelationToExprProject {
         pigServer.shutdown();
     }
 
-    @AfterClass
-    public static void oneTimeTearDown() throws Exception {
-        cluster.shutDown();
-    }
-
     // based on the script provided in the jira issue:PIG-514
     // tests that when a filter inside a foreach filters away all tuples
     // for a group, an empty bag is still provided to udfs whose
     // input is the filter
     @Test
     public void testFilterCount1() throws IOException, ParserException {
-
-        String[] inputData = new String[] {"1\t1\t3","1\t2\t3", "2\t1\t3", "2\t1\t3"};
-        Util.createInputFile(cluster, "test.txt", inputData);
-        String script = "test   = load 'test.txt' as (col1: int, col2: int, col3: int);" +
+        Data data = resetData(pigServer);
+        data.set("foo", tuple(1,1,3), tuple(1,2,3), tuple(2,1,3), tuple(2,1,3));
+        String script = "test   = load 'foo' using mock.Storage() as (col1: int, col2: int, col3: int);" +
         		"test2 = group test by col1;" +
         		"test3 = foreach test2 {" +
         		"        filter_one    = filter test by (col2==1);" +
         		"        filter_notone = filter test by (col2!=1);" +
         		"        generate group as col1, COUNT(filter_one) as cnt_one, COUNT(filter_notone) as cnt_notone;};";
-        Util.registerMultiLineQuery(pigServer, script);
+        pigServer.registerQuery(script);
         Iterator<Tuple> it = pigServer.openIterator("test3");
         Tuple[] expected = new DefaultTuple[2];
         expected[0] = (Tuple) Util.getPigConstant("(1,1L,1L)");
@@ -120,7 +114,6 @@ public class TestRelationToExprProject {
         for (int j = 0; j < expected.length; j++) {
             assertTrue(expected[j].equals(results[j]));
         }
-        Util.deleteFile(cluster, "test.txt");
     }
 
     // based on jira PIG-710
@@ -129,16 +122,17 @@ public class TestRelationToExprProject {
     // input is the filter
     @Test
     public void testFilterCount2() throws IOException, ParserException {
-        Util.createInputFile(cluster, "filterbug.data", new String[] {
-                "a\thello" ,
-                "a\tgoodbye" ,
-                "b\tgoodbye" ,
-                "c\thello" ,
-                "c\thello" ,
-                "c\thello" ,
-                "d\twhat"
-        });
-        String query = "A = load 'filterbug.data' using PigStorage() as ( id:chararray, str:chararray );" +
+        Data data = resetData(pigServer);
+        data.set("foo",
+                tuple("a", "hello"),
+                tuple("a", "goodbye"),
+                tuple("b", "goodbye"),
+                tuple("c", "hello"),
+                tuple("c", "hello"),
+                tuple("c", "hello"),
+                tuple("d", "what")
+                );
+        String query = "A = load 'foo' using mock.Storage() as ( id:chararray, str:chararray );" +
         		"B = group A by ( id );" +
         		"Cfiltered = foreach B {" +
         		"        D = filter A by (" +
@@ -150,7 +144,7 @@ public class TestRelationToExprProject {
         		"                matchedcount as matchedcount," +
         		"                A.str;" +
         		"        };";
-        Util.registerMultiLineQuery(pigServer, query);
+        pigServer.registerQuery(query);
         Iterator<Tuple> it = pigServer.openIterator("Cfiltered");
         Map<String, Tuple> expected = new HashMap<String, Tuple>();
         expected.put("a", (Tuple) Util.getPigConstant("('a',1L,{('hello'),('goodbye')})"));
@@ -164,7 +158,6 @@ public class TestRelationToExprProject {
             i++;
         }
         assertEquals(4, i);
-        Util.deleteFile(cluster, "filterbug.data");
     }
 
     // based on jira PIG-739
@@ -173,8 +166,8 @@ public class TestRelationToExprProject {
     // input is the filter
     @Test
     public void testFilterCount3() throws IOException, ParserException {
-        Util.copyFromLocalToCluster(cluster, TEST_FILTER_COUNT3_INPUT, "testdata");
-        String query = "TESTDATA =  load 'testdata' using PigStorage() as (timestamp:chararray, testid:chararray, userid: chararray, sessionid:chararray, value:long, flag:int);" +
+        //Util.copyFromLocalToCluster(cluster, TEST_FILTER_COUNT3_INPUT, "testdata");
+        String query = "TESTDATA =  load '"+TEST_FILTER_COUNT3_INPUT+"' using PigStorage() as (timestamp:chararray, testid:chararray, userid: chararray, sessionid:chararray, value:long, flag:int);" +
         		"TESTDATA_FILTERED = filter TESTDATA by (timestamp gte '1230800400000' and timestamp lt '1230804000000' and value != 0);" +
         		"TESTDATA_GROUP = group TESTDATA_FILTERED by testid;" +
         		"TESTDATA_AGG = foreach TESTDATA_GROUP {" +
@@ -184,7 +177,7 @@ public class TestRelationToExprProject {
         		"                }" +
         		"TESTDATA_AGG_1 = group TESTDATA_AGG ALL;" +
         		"TESTDATA_AGG_2 = foreach TESTDATA_AGG_1 generate COUNT(TESTDATA_AGG);" ;
-        Util.registerMultiLineQuery(pigServer, query);
+        pigServer.registerQuery(query);
         Iterator<Tuple> it = pigServer.openIterator("TESTDATA_AGG_2");
 
         int i = 0;
@@ -194,7 +187,6 @@ public class TestRelationToExprProject {
             i++;
         }
         assertEquals(1, i);
-        Util.deleteFile(cluster, "testdata");
     }
 
     // test case where RelationToExprProject is present in the
@@ -202,15 +194,15 @@ public class TestRelationToExprProject {
     // send an EOP eventually for each input of the foreach
     @Test
     public void testFilter1() throws IOException, ParserException {
+        Data data = resetData(pigServer);
+        data.set("foo", tuple(1,1,3), tuple(1,2,3), tuple(2,1,3), tuple(2,1,3), tuple(3,4,4));
 
-        String[] inputData = new String[] {"1\t1\t3","1\t2\t3", "2\t1\t3", "2\t1\t3", "3\t4\t4"};
-        Util.createInputFile(cluster, "test.txt", inputData);
-        String script = "test   = load 'test.txt' as (col1: int, col2: int, col3: int);" +
+        String script = "test   = load 'foo' using mock.Storage() as (col1: int, col2: int, col3: int);" +
                 "test2 = group test by col1;" +
                 "test3 = foreach test2 {" +
                 "        filter_one    = filter test by (col2==1);" +
                 "        generate filter_one;};";
-        Util.registerMultiLineQuery(pigServer, script);
+        pigServer.registerQuery(script);
         Iterator<Tuple> it = pigServer.openIterator("test3");
         Map<Tuple, Integer> expected = new HashMap<Tuple, Integer>();
         expected.put((Tuple) Util.getPigConstant("({(1,1,3)})"), 0);
@@ -233,7 +225,6 @@ public class TestRelationToExprProject {
         for (Integer occurences : expected.values()) {
             assertEquals(new Integer(1), occurences);
         }
-        Util.deleteFile(cluster, "test.txt");
     }
 
     // test case where RelationToExprProject is present in a
@@ -243,10 +234,10 @@ public class TestRelationToExprProject {
     // input has been seen on a fresh input from foreach.
     @Test
     public void testFilter2() throws IOException, ParserException {
+        Data data = resetData(pigServer);
+        data.set("foo", tuple(1,1,3), tuple(1,2,3), tuple(2,1,3), tuple(2,1,3), tuple(3,4,4));
 
-        String[] inputData = new String[] {"1\t1\t3","1\t2\t3", "2\t1\t3", "2\t1\t3", "3\t4\t4"};
-        Util.createInputFile(cluster, "test.txt", inputData);
-        String script = "test   = load 'test.txt' as (col1: int, col2: int, col3: int);" +
+        String script = "test   = load 'foo' using mock.Storage() as (col1: int, col2: int, col3: int);" +
                 "test2 = group test by col1;" +
                 "test3 = foreach test2 {" +
                 "        filter_one    = filter test by (col2==1);" +
@@ -273,10 +264,7 @@ public class TestRelationToExprProject {
             i++;
         }
         for (Integer occurences : expected.values()) {
-            assertEquals(new Integer(1), occurences);
+            assertEquals(Integer.valueOf(1), occurences);
         }
-        Util.deleteFile(cluster, "test.txt");
     }
-
-
 }
